[package]
name = "the_box"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.9", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.0", features = ["full"] }
sled = "0.34"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
